exports[`test should render Container correctly with HOC 1`] = `<Connect(IntlProvider) />`;

exports[`test should return props correctly with mapDispatchToProps 1`] = `
Object {
  "pushLocale": [Function],
}
`;

exports[`test should return props correctly with mapStateToProps 1`] = `
Object {
  "locale": "zh-TW",
}
`;
